Simplify Prisma config to use single DATABASE_URL
- Remove directUrl from schema (not needed for single connection)
- Update .env.example to use single DATABASE_URL per Neon docs
- Matches current Neon documentation pattern

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,2 @@
-# Neon Database Connection Strings
-
-# Connection pooling URL (for queries) - use with pgbouncer=true
-DATABASE_URL="postgresql://user:password@host/database?sslmode=require&pgbouncer=true"
-
-# Direct connection URL (for migrations) - without pgbouncer
-DIRECT_URL="postgresql://user:password@host/database?sslmode=require"
+# Neon Database Connection String
+DATABASE_URL="postgresql://user:password@host/database?sslmode=require"
