--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.545.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
+    "papaparse": "^5.5.3",
     "pg": "^8.16.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -36,6 +37,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/papaparse": "^5.5.2",
     "@types/pg": "^8.11.10",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
