Refactor README setup and add env.example

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,18 @@
-# Neon Database Connection String
-DATABASE_URL="postgresql://user:password@host/database?sslmode=require"
+# Database
+# PostgreSQL connection string for the application
+DATABASE_URL=postgresql://username:password@host:port/database?sslmode=require
+
+# Database (Unpooled)
+# PostgreSQL connection string for database migrations (direct connection, no pooling)
+DATABASE_URL_UNPOOLED=postgresql://username:password@host:port/database?sslmode=require
+
+# Clerk Authentication
+# Get these from your Clerk dashboard at https://dashboard.clerk.com/
+CLERK_SECRET_KEY=sk_test_...
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_...
+
+# Clerk URLs (optional - configure if using custom domains)
+# NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+# NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+# NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/dashboard
+# NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/dashboard
